An initial stab at getting a build and some of the tests running. Updated SBT, the Scala 2.12 minor version and ByteBuddy; also rationalised the Java classfile version for compiled classes.
Now have to deal with failing tests concerned with Redis and Curium...